ci: add network

--- a/.ci/docker/docker-compose-memcached.yml
+++ b/.ci/docker/docker-compose-memcached.yml
@@ -12,3 +12,7 @@ services:
     depends_on:
       memcached:
         condition: service_healthy
+
+networks:
+  apm-agent-nodejs:
+    driver: bridge
