--- a/.ci/Jenkinsfile
+++ b/.ci/Jenkinsfile
@@ -356,7 +356,7 @@ def generateStep(Map params = [:]){
   def buildType = params.containsKey('buildType') ? params.buildType : 'release'
   def ELASTIC_APM_ASYNC_HOOKS = String.valueOf(!params.get('disableAsyncHooks', false))
   return {
-    node('linux && immutable'){
+    withNode(labels: 'linux && immutable', forceWorspace: true, forceWorker: true) {
       withEnv(["VERSION=${version}", "ELASTIC_APM_ASYNC_HOOKS=${ELASTIC_APM_ASYNC_HOOKS}"]) {
         deleteDir()
         unstash 'source'
@@ -430,7 +430,7 @@ def getSmartTAVContext() {
 
  def linting(){
    return {
-    node('linux && immutable') {
+    withNode(labels: 'linux && immutable', forceWorspace: true, forceWorker: true) {
       catchError(stageResult: 'UNSTABLE', message: 'Linting failures') {
         withGithubNotify(context: 'Linting') {
           deleteDir()
@@ -453,7 +453,7 @@ def generateStepForWindows(Map params = [:]){
   return {
     sh label: 'Prepare services', script: ".ci/scripts/windows/prepare-test.sh ${version}"
     def linuxIp = grabWorkerIP()
-    node('windows-2019-docker-immutable'){
+    withNode(labels: 'windows-2019-docker-immutable', forceWorspace: true, forceWorker: true) {
       // When installing with choco the PATH might not be updated within the already connected worker.
       withEnv(["PATH=${PATH};C:\\Program Files\\nodejs",
                "VERSION=${version}",
