--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /package-lock.json
 /test/babel/out.js
 /test/types/transpile/index.js
+/test/types/transpile-default/index.js
 /test-suite-output.tap
 
 # Folders to ignore
