fix: avoid import of any '@types/...' packages in types file
This ensures that TypeScript users do not need to install separate
'@types/...' packages to build -- with the lone exception of
'@types/node'.

We avoid imports by instead inlining the required types. This is a
trade-off. We don't want '@types/...' in "dependencies" because they
can be big and aren't really "official" types for those packages.

Fixes: #2331

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "files": [
     "lib",
+    "types",
     "start.js",
     "index.d.ts",
     "start.d.ts"
@@ -120,8 +121,6 @@
     "@elastic/elasticsearch": "^7.14.0",
     "@hapi/hapi": "^20.1.2",
     "@koa/router": "^9.0.1",
-    "@types/aws-lambda": "^8.10.77",
-    "@types/connect": "^3.4.34",
     "@types/node": "^13.7.4",
     "@types/pino": "^6.3.8",
     "ajv": "^6.12.6",
