tests: avoid test crash getting @elastic/elasticsearch version
The tests were using `require('@elastic/elasticsearch/package.json')`
which runs afoul of EOL'd folder mappings in "exports"
(https://nodejs.org/api/all.html#DEP0148) with current ES client
versions and the latest node v17 nightly.

Fixes: #2350

--- a/package.json
+++ b/package.json
@@ -162,6 +162,7 @@
     "memcached": "^2.2.2",
     "mimic-response": "^2.1.0",
     "mkdirp": "^0.5.1",
+    "module-details-from-path": "^1.0.3",
     "mongodb": "^4.1.0",
     "mongodb-core": "^3.2.7",
     "mysql": "^2.18.1",
