--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,6 +20,7 @@ on:
     - '*.md'
     - '*.asciidoc'
     - 'docs/**'
+    - 'examples/**'
   pull_request:
     branches:
     - master
@@ -27,6 +28,7 @@ on:
     - '*.md'
     - '*.asciidoc'
     - 'docs/**'
+    - 'examples/**'
 
 jobs:
   test-vers:
