--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -139,4 +139,5 @@ jobs:
         node-version: ${{ matrix.node }}
     - run: docker ps  # show the services against which we'll be testing
     - run: npm install
+    - run: npm ls --all || true
     - run: npm test
