--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -120,6 +120,7 @@ jobs:
     strategy:
       matrix:
         node:
+          - '17'
           - '16'
           - '16.0'
           - '14'
@@ -138,4 +139,5 @@ jobs:
         node-version: ${{ matrix.node }}
     - run: docker ps  # show the services against which we'll be testing
     - run: npm install
+    - run: npm ls --all || true
     - run: npm test
