--- a/.ci/Jenkinsfile
+++ b/.ci/Jenkinsfile
@@ -17,6 +17,7 @@ pipeline {
     NOTIFY_TO = 'build-apm+apm-agent-nodejs@elastic.co'
     NPMRC_SECRET = 'secret/jenkins-ci/npmjs/elasticmachine'
     TOTP_SECRET = 'totp/code/npmjs-elasticmachine'
+    NODE_VERSION = 'v14.17.5'
   }
   options {
     timeout(time: 3, unit: 'HOURS')
@@ -290,7 +291,7 @@ pipeline {
               setEnvVar('RELEASE_NOTES_URL', getReleaseNotesUrl())
               deleteDir()
               unstash 'source'
-              withNodeJSEnv(version: 'v14.17.5'){
+              withNodeJSEnv(version: "${env.NODE_VERSION}"){
                 dir("${BASE_DIR}"){
                   cmd(label: 'make dist', script: 'make -C .ci dist')
                 }
@@ -328,11 +329,11 @@ pipeline {
         }
         stage('Publish to npm') {
           steps {
-            withNodeJSEnv(version: 'v14.17.5') {
+            withNodeJSEnv(version: "${env.NODE_VERSION}") {
               withNpmrc(secret: "${env.NPMRC_SECRET}", path: "${env.WORKSPACE}/${env.BASE_DIR}") {
                 withTotpVault(secret: "${env.TOTP_SECRET}", code_var_name: 'TOTP_CODE') {
                   dir("${BASE_DIR}") {
-                    sh(label: 'npm-publish', script: 'npm publish --otp="${env.TOTP_CODE}"')
+                    sh(label: 'npm-publish', script: "npm publish --otp=${env.TOTP_CODE}")
                   }
                 }
               }
