--- a/examples/otel/package.json
+++ b/examples/otel/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "main": "example-http-request.js",
   "dependencies": {
-    "@opentelemetry/api": "^1.0.4",
-    "@opentelemetry/instrumentation": "^0.27.0",
-    "@opentelemetry/instrumentation-http": "^0.27.0",
-    "@opentelemetry/sdk-trace-base": "^1.0.1",
-    "@opentelemetry/sdk-trace-node": "^1.0.1",
+    "@opentelemetry/api": "^1.1.0",
+    "@opentelemetry/core": "^1.2.0",
+    "@opentelemetry/instrumentation": "^0.28.0",
+    "@opentelemetry/instrumentation-http": "^0.28.0",
+    "@opentelemetry/sdk-trace-base": "^1.2.0",
+    "@opentelemetry/sdk-trace-node": "^1.2.0",
     "elastic-apm-node": "file:../.."
   }
 }
