--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
   "homepage": "https://github.com/elastic/apm-agent-nodejs",
   "dependencies": {
     "@elastic/ecs-pino-format": "^1.2.0",
+    "@grpc/grpc-js": "^1.7.3",
     "@opentelemetry/api": "^1.1.0",
     "after-all-results": "^2.0.0",
     "async-cache": "^1.1.0",
