--- a/.tav.yml
+++ b/.tav.yml
@@ -351,6 +351,7 @@ pug:
 # - Node version compat:
 #   - @hapi/hapi@19: supports node >=v12 (judging from commit 50d8d7d)
 #   - @hapi/hapi@20: appears (from travis template refs) to support node >=v12
+#   - @hapi/hapi@21: dropped support for node v12
 '@hapi/hapi-v17-v18':
   name: '@hapi/hapi'
   versions: '>=17.0.0 <19.0.0'
@@ -358,10 +359,17 @@ pug:
   commands:
     - node test/instrumentation/modules/hapi/basic.test.js
     - node test/instrumentation/modules/hapi/set-framework-hapihapi.test.js
-'@hapi/hapi':
+'@hapi/hapi-v19-v20':
   name: '@hapi/hapi'
-  versions: '>=19.0.0'
+  versions: '>=19.0.0 <21.0.0'
   node: '>=12'
+  commands:
+    - node test/instrumentation/modules/hapi/basic.test.js
+    - node test/instrumentation/modules/hapi/set-framework-hapihapi.test.js
+'@hapi/hapi-v19-v20':
+  name: '@hapi/hapi'
+  versions: '>=21.0.0'
+  node: '>=14'
   commands:
     - node test/instrumentation/modules/hapi/basic.test.js
     - node test/instrumentation/modules/hapi/set-framework-hapihapi.test.js
