--- a/.tav.yml
+++ b/.tav.yml
@@ -366,7 +366,7 @@ pug:
   commands:
     - node test/instrumentation/modules/hapi/basic.test.js
     - node test/instrumentation/modules/hapi/set-framework-hapihapi.test.js
-'@hapi/hapi-v19-v20':
+'@hapi/hapi':
   name: '@hapi/hapi'
   versions: '>=21.0.0'
   node: '>=14'
