--- a/.tav.yml
+++ b/.tav.yml
@@ -351,7 +351,8 @@ pug:
 # - Node version compat:
 #   - @hapi/hapi@19: supports node >=v12 (judging from commit 50d8d7d)
 #   - @hapi/hapi@20: appears (from travis template refs) to support node >=v12
-#   - @hapi/hapi@21: dropped support for node v12
+#   - @hapi/hapi@21: dropped support for node v12, and requires v14.10.0
+#     for 'performance.eventLoopUtilization'
 '@hapi/hapi-v17-v18':
   name: '@hapi/hapi'
   versions: '>=17.0.0 <19.0.0'
@@ -369,7 +370,7 @@ pug:
 '@hapi/hapi':
   name: '@hapi/hapi'
   versions: '>=21.0.0'
-  node: '>=14'
+  node: '>=14.10.0'
   commands:
     - node test/instrumentation/modules/hapi/basic.test.js
     - node test/instrumentation/modules/hapi/set-framework-hapihapi.test.js
