--- a/.tav.yml
+++ b/.tav.yml
@@ -164,17 +164,17 @@ mongodb:
 # - v7 was released recently (2023-02-27)
 mongoose-5:
   name: mongoose
-  versions: '5.0.0 || 5.3.2 || 5.5.10 || 5.9.2 || 5.11.2 || 5.13.14 || 5.13.17'
+  versions: '5.0.0 || 5.3.2 || 5.5.10 || 5.9.2 || 5.11.2 || 5.13.14 || >=5.13.17 <6'
   node: '>=4.0.0'
   commands: node test/instrumentation/modules/mongoose.test.js
 mongoose-6:
   name: mongoose
-  versions: '6.0.0 || 6.1.2 || 6.2.9 || 6.4.5 || 6.7.1 || 6.10.4 || 6.11.1'
+  versions: '6.0.0 || 6.1.2 || 6.2.9 || 6.4.5 || 6.7.1 || 6.10.4 || >=6.11.1 <7'
   node: '>=12.0.0'
   commands: node test/instrumentation/modules/mongoose.test.js
 mongoose-7:
   name: mongoose
-  versions: '7.0.0 || 7.0.4 || 7.1.0 || 7.1.2 || 7.2.1 || 7.2.2'
+  versions: '7.0.0 || 7.0.4 || 7.1.0 || 7.1.2 || 7.2.1 || >=7.2.2 <8'
   node: '>=14.20.1'
   commands: node test/instrumentation/modules/mongoose.test.js
 
